[Test] 테스트 데이터 삽입 환경 개선 (#73)
* refac: UserFixture 및 UserFactory 도입

* refac: CardFixture 및 CardFactory 도입 (+ Career)

* refac: 메서드명과 필드명 통일